fix: make withModelIntent work with async generator tools (#78)

--- a/packages/model-intent/package.json
+++ b/packages/model-intent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blink-sdk/model-intent",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "keywords": [
     "blink",
     "model-intent",
@@ -37,5 +37,8 @@
   "peerDependencies": {
     "zod": ">=4",
     "ai": ">=5"
+  },
+  "devDependencies": {
+    "msw": "^2.12.2"
   }
 }
