feat: make multiplexer ready for publication (#81)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Build packages
         run: |
+          bun run --cwd packages/events build
+          bun run --cwd packages/multiplexer build
           bun run --cwd packages/compute-protocol build
           bun run --cwd packages/compute build
           bun run --cwd packages/github build
