--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251211.0",
     "@lexical/react": "^0.32.1",
     "@lexical/utils": "^0.32.1",
     "@next/bundle-analyzer": "^15.5.3",
@@ -34,9 +35,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@remixicon/react": "^4.6.0",
-    "@storybook/experimental-nextjs-vite": "^8.6.14",
-    "@storybook/react": "8.6.14",
-    "@storybook/test": "8.6.14",
+    "@storybook/nextjs-vite": "^9.1.16",
+    "@storybook/react": "^9.1.16",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.16",
@@ -72,7 +72,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
-    "storybook": "8.6.14",
+    "storybook": "^9.1.16",
     "stripe": "^18.2.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
