--- a/internal/site/package.json
+++ b/internal/site/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5"
   },
   "devDependencies": {
+    "@blink-sdk/compute-protocol": "workspace:*",
     "@blink-sdk/events": "workspace:*",
     "@cloudflare/workers-types": "^4.20251211.0",
     "@lexical/react": "^0.32.1",
