Move blink.so to blink.coder.com (#145)

--- a/internal/worker/wrangler.toml
+++ b/internal/worker/wrangler.toml
@@ -9,40 +9,12 @@ compatibility_flags = [
 ]
 routes = [
     # The * is needed to pick up query parameters.
-    { pattern = "blink.so/api/legacy-chat-stream*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/chat-read", zone_name = "blink.so" },
-    { pattern = "blink.so/api/chat-search*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/chat-debug*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/static-deployment", zone_name = "blink.so" },
-    { pattern = "blink.so/api/user-state", zone_name = "blink.so" },
-    { pattern = "blink.so/webhook/slack", zone_name = "blink.so" },
-    { pattern = "blink.so/webhook/github", zone_name = "blink.so" },
-    { pattern = "blink.so/webhook/stripe", zone_name = "blink.so" },
-    { pattern = "blink.so/webhook/metronome", zone_name = "blink.so" },
-    { pattern = "blink.so/api/connect", zone_name = "blink.so" },
-    { pattern = "blink.so/api/connect-error", zone_name = "blink.so" },
-    { pattern = "blink.so/api/connect-client*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/connect-token", zone_name = "blink.so" },
-    { pattern = "blink.so/api/connect-chat*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/text-to-speech", zone_name = "blink.so" },
+    { pattern = "blink.so/webhook/*", zone_name = "blink.so" },
+    { pattern = "blink.so/api/*", zone_name = "blink.so" },
     { pattern = "blink.so/static/*", zone_name = "blink.so" },
-    { pattern = "blink.so/legacy-auth*", zone_name = "blink.so" },
-    { pattern = "*.build.party/*", zone_name = "build.party" },
+    { pattern = "blink.coder.com/api/*", zone_name = "coder.com" },
+    { pattern = "blink.coder.com/static/*", zone_name = "coder.com" },
 
-    # Migrate to the new routes.
-    { pattern = "blink.so/api/agents*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/files*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/users*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/organizations*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/invites*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/chats*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/messages*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/webhook*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/devhook*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/auth*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/tools*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/ai-gateway*", zone_name = "blink.so" },
-    { pattern = "blink.so/api/otlp*", zone_name = "blink.so" },
     { pattern = "*.blink.host/*", zone_name = "blink.host" },
     { pattern = "*.agent.blink.host/*", zone_name = "blink.host" },
     { pattern = "*.dev.blink.host/*", zone_name = "blink.host" }
