--- a/packages/slack/package.json
+++ b/packages/slack/package.json
@@ -4,7 +4,7 @@
   "author": {
     "name": "Coder",
     "email": "support@blink.so",
-    "url": "https://blink.so"
+    "url": "https://blink.coder.com"
   },
   "repository": {
     "type": "git",
