--- a/internal/api/package.json
+++ b/internal/api/package.json
@@ -30,12 +30,14 @@
     "@blink-sdk/events": "workspace:*",
     "@bufbuild/protobuf": "^2.9.0",
     "@testing-library/react": "^16.3.0",
+    "@types/tar-stream": "^3.1.3",
     "eventsource-parser": "^3.0.6",
     "happy-dom": "^18.0.1",
     "hono": "^4.9.7",
     "msw": "^2.12.1",
     "react": "19.1.2",
     "react-dom": "19.1.2",
+    "tar-stream": "^3.1.7",
     "tsdown": "^0.15.1",
     "zod": "^4.1.9",
     "zod-validation-error": "^4.0.1"
