fix: add onboarding to worker routes (#151)

--- a/internal/worker/package.json
+++ b/internal/worker/package.json
@@ -19,6 +19,7 @@
     "@blink-sdk/compute-protocol": "workspace:*",
     "@blink-sdk/events": "workspace:*",
     "@blink-sdk/multiplexer": "workspace:*",
+    "@blink.so/api": "workspace:*",
     "@clickhouse/client-web": "^1.12.1",
     "@daytonaio/sdk": "^0.106.4",
     "@microlabs/otel-cf-workers": "^1.0.0-rc.52",
