--- a/internal/api/package.json
+++ b/internal/api/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@blink-sdk/events": "workspace:*",
+    "blink": "workspace:*",
     "@bufbuild/protobuf": "^2.9.0",
     "@testing-library/react": "^16.3.0",
     "@types/tar-stream": "^3.1.3",
