fix(blink): enable full typecheck (#158)

--- a/packages/blink/tsconfig.json
+++ b/packages/blink/tsconfig.json
@@ -1,10 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "noEmit": false,
-    "allowImportingTsExtensions": false,
-    "outDir": "./dist/api",
-    "declaration": true
-  },
-  "include": ["src/agent/**/*.ts", "src/test.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
