--- a/packages/blink/package.json
+++ b/packages/blink/package.json
@@ -114,6 +114,7 @@
     "@whatwg-node/server": "^0.10.12",
     "@xterm/headless": "^5.5.0",
     "ansi-escapes": "^7.1.1",
+    "async-mutex": "^0.5.0",
     "chalk": "^5.6.2",
     "commander": "^14.0.0",
     "dotenv": "^17.2.3",
