--- a/internal/compute-protocol-worker/tsconfig.json
+++ b/internal/compute-protocol-worker/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src/**/*.ts"]
+  "compilerOptions": {
+    "types": []
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.test.ts"]
 }
