feat(server): use a non-privileged user to run agent inside container (#180)

--- a/packages/server/docker/agent/Dockerfile
+++ b/packages/server/docker/agent/Dockerfile
@@ -20,3 +20,13 @@ RUN apk add --no-cache bash
 COPY --from=otel-builder /build/dist/collector /usr/local/bin/collector
 
 COPY otel/config.yaml otel/start-collector.sh /opt/otel/
+
+# Create a non-root user with a high UID unlikely to exist on the host
+# Using UID 65532 which is high but within typical kernel limits
+RUN addgroup -g 65532 agent && \
+    adduser -u 65532 -G agent -D -H agent && \
+    chmod +x /opt/otel/start-collector.sh && \
+    mkdir -p /var/log/agent && \
+    chown agent:agent /var/log/agent
+
+USER agent
